# miracle-wm

./: .gitignore  CMakeLists.txt  RELEASING.md
.github/workflows/: cmake.yml  snap-candidate.yml  snap-publish-stable.yml  snap-stable.yml  tidy.yml
debian/: changelog  control  files  rules
snap/: snapcraft.yaml
src/: animation_definition.cpp  animation_defintion.h  animator.cpp  animator.h  animator_loop.cpp  animator_loop.h  command_controller.cpp  command_controller.h  compositor_state.cpp  compositor_state.h  config.cpp  config.h  config_error_handler.cpp  config_error_handler.h  constants.h  container.cpp  container.h  container_group_container.cpp  container_group_container.h  debug_helper.h  direction.h  drag_and_drop_service.cpp  drag_and_drop_service.h  feature_flags.h  floating_tree_container.cpp  floating_tree_container.h  floating_window_container.cpp  floating_window_container.h  i3_command.cpp  i3_command.h  i3_command_executor.cpp  i3_command_executor.h  ipc.cpp  ipc.h  ipc_command.cpp  ipc_command.h  ipc_command_executor.cpp  ipc_command_executor.h  leaf_container.cpp  leaf_container.h  (+52 more)
src/xdg-desktop-portal-miracle/: wlr.portal
tests/: CMakeLists.txt  filesystem_configuration_test.cpp  mock_configuration.h  mock_container.h  mock_output.h  mock_output_factory.h  mock_parent_container.h  mock_tiling_window_tree.h  mock_window_controller.h  mock_workspace.h  single_mock_output_factory.h  stub_configuration.h  stub_container.h  stub_surface.h  stub_window_controller.h  test_animator.cpp  test_command_controller.cpp  test_drag_and_drop_service.cpp  test_feature_flags.cpp  test_filesystem_configuration.cpp  test_ipc_command_parser.cpp  test_leaf_container.cpp  test_output_manager.cpp  test_render_data_manager.cpp  test_scratchpad.cpp  test_tiling_window_tree.cpp  test_workspace.cpp  tiling_window_tree_test.cpp  with_command_controller.h
tests/ipc/: README.md  conftest.py  stress.py  test_get_tree.py  test_move_command.py
tools/: clang-tidy-check.sh
